# DataEtatRegion-back

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  dev-all-requirements.txt  dev-requirements.in  dev-requirements.txt  manage.py  pyproject.toml  pyrightconfig.json  renovate.json  requirements.in  requirements.txt  ruff.toml
apis/: .importlinter.toml  Dockerfile  README.md  pyproject.toml  requirements.editable.txt  requirements.external.in  requirements.external.txt  setup.py
apis/.build-helper-scripts/: update-requirements-external.sh
apis/config/: config.yml  config_template.yml
apis/src/apis/: __init__.py  app.py  cli.py  config.py  database.py  exception_handlers.py  fastapi_runtime_detailed_metrics.py  main.py  security.py
apis/tests/: __init__.py  config_template.yml  conftest.py  pytest.ini
apis/tests/clients/: test_keycloak.py
apis/tests/config/: config.yml
apis/tests/fixtures/: app.py  db.py
apis/tests/security/: test_security.py
apis/tests/services/: _utils_test_model.py  test_model.py  test_upload_session.py
apis/tests/shared/: test_models.py
app/: .importlinter.toml  Dockerfile  README-dbmigration.md  README.md  __init__.py  dev-requirements.txt  pyproject.toml  requirements.editable.txt  requirements.external.in  requirements.external.txt  setup.py
app/.build-helper-scripts/: update-requirements-external.sh
app/celeryapp/: __init__.py  celery_worker.py
app/clients/data_subventions/: __init__.py  api_subventions.py  errors.py  factory.py
app/clients/demarche_simplifie/: __init__.py
app/clients/entreprise/: __init__.py  factory.py
app/clients/geo/: __init__.py
app/clients/keycloack/: factory.py
app/config/: beat_config_template.py  config_template.yml  oidc_template.yml
app/controller/: Decorators.py
app/controller/administration/: AuditCtrl.py  ImportReferentielFinancial.py  PreferenceUsersCtrl.py  UsersManagementCtrl.py
app/controller/apis_externes/: ApisExternesCtrl.py  __init__.py  errorhandlers.py
app/controller/demarches/: DemarchesCtrl.py  __init__.py
app/controller/financial_data/: AdemeCtrl.py  FinancialAeCtrl.py  FinancialCpCtrl.py  FinancialDataCtrl.py  France2030.py  France2030Ctrl.py  TagsCtrl.py  __init__.py  schema_model.py
app/controller/laureats_data/: France2030Ctrl.py
app/controller/proxy_nocodb/: NococbCtrl.py  __init__.py
app/controller/ref_controller/: LoginController.py  RefController.py  RefCrte.py  RefLocalisationInterministerielle.py  RefTags.py  __init__.py
app/controller/task_management/: TaskCtrl.py  __init__.py
app/controller/ui_controller/: UiController.py  __init__.py
app/controller/utils/: ControllerUtils.py  LoginController.py
app/controller/visuterritoire/: MontantParNiveauBopAnneeTypeCtrl.py  __init__.py
app/exceptions/: exceptions.py
app/files_watchers/: fichier_nat_watcher.py  tasks_delayer.py
app/migrations/: env.py
app/migrations.old/versions/: 20220919_init_budget.py  20220929_ref_theme_prog.py  20221003_ref_commune.py  20221004_ref_cat_juridique.py  20221104_view_montant.py  20230113_preference.py  20230208_pref_and_region.py  20230316_annee_chorus.py  20230406_model_ref.py  20230417_financial_cp.py  20230517_loc_interminis.py  20230519_montant_ae.py  20230607_ademe.py  20230620_fix_idempotence_ademe_cp.py  20230701_ademe_from_datagouv.py  20230802_france_2030.py  20230811_tags.py  20230831_qpv.py  20230901_20230808_view.py  20230929_date_replication.py  20231026_fix_tags_case_assainit_le_nom_de_tags_actuels.py  20231123_views_in_migration.py  20231204_tags_auto.py  20240122_france2030_.py  20240212_cp_orphelins.py  20240212_z_correctifs_resana_.py  20240212_zz_ae_montant_cascade.py  20240212_zzz_delayed_ins_tasks.py  20240212_zzzz_col_username.py  20240304_a_centres_couts_.py  20240304_b_integration_demarches.py  20240304_c_correction_cc.py  20240304_hf_vues_visuterritoires.py  20240304_indices_for_ae_deletion_.py
app/migrations/versions/: 20240325_a_multidb_migration_.py  20240910_reconciliation_2.py  20240912_fix_id_donnees_ds.py  20241007_ajout_data_source.py  20241007_modification_contrainte_nullable_true.py  20241007_qpv_code_15_24.py  20241007_qpv_with_geom.py  20241018_ajout_data_source.py  20241018_z_v1_apponevtimport.py  20241022_vues_qpv_2024.py  20241025_multi_token_ds_multi_token_ds.py  20241029_hf1_import_appid.py  20241030_multi_token_ds_multi_token_ds.py  20241115_a_qpv_code_15_24.py  20241115_b_qpv_with_geom.py  (+46 more)
app/models/: __init__.py  utils.py
app/services/: __init__.py  api_externes.py  code_geo.py  communes.py  demarches.py  file_service.py  financial_data.py  helper.py  import_refs.py  siret.py  tags.py
app/servicesapp/: __init__.py  financial_data.py  france2030.py  tags.py
app/tasks/: __init__.py  import_refs_tasks.py  management_tasks.py  siret.py
app/tests/: DataEtatPostgresContainer.py  __init__.py  conftest.py
app/utilities/: __init__.py  bucketting.py  observability.py  pretty_printer.py  siret.py
batches/: .gitignore  .importlinter.toml  Dockerfile  README.md  pyproject.toml  requirements.editable.txt  requirements.external.in  requirements.external.txt  setup.py
batches/.build-helper-scripts/: update-requirements-external.sh
batches/config/: config_template.yml
batches/tests/: __init__.py  conftest.py  pytest.ini
grist-plugins/: Dockerfile  DockerfileFrontend  README.md  pyproject.toml  requirements.editable.txt  requirements.external.in  requirements.external.txt  setup.py
grist-plugins/.build-helper-scripts/: update-requirements-external.sh
gristcli/: pyproject.toml
models/: pyproject.toml
models/tests/: test_utils.py
services/: pyproject.toml  requirements.editable.txt  requirements.external.in  setup.py
services/docs/: upload_sessions_analysis.md
services/tests/: test_antivirus_service.py  test_regions.py  test_upload_session.py  test_utils.py
supersetcli/: pyproject.toml
tests_e2e/: README.md  __init__.py  conftest.py  pyproject.toml  requirement.txt
tests_e2e/tests/: conftest.py
tests_e2e/utils/: __init__.py
(+931 files in other folders)
