[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
dynamic = ["version", "dependencies"]
description = "Application principale de data-transform"

# Définition du répertoire source
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
version = "0.1.0"

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.optional-dependencies]
dev = [
  "pytest ~= 8.3",
  "pytest-cov ~=6.0",
  "mypy ~= 1.11",
  "black ~=25.1",
  "pip-tools ~= 7.4",
  "pre-commit ~=4.1",
  "faker ~= 28.4",
  "ruff ~= 0.6",
  "testcontainers ~=4.9",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.py$'
exclude = '''
^/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv11
    | migrations
    | config
)
'''
