[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2,<9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
dynamic = ["version", "dependencies"]
description = "Application principale de data-transform"

# Définition du répertoire source
[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app" = ["*", "migrations/*"]

[project.optional-dependencies]
dev = [
  "import-linter ~= 2.3",
  "pytest ~= 8.3",
  "pytest-cov ~=6.0",
  "mypy ~= 1.11",
  "pip-tools ~= 7.4",
  "pre-commit ~=4.1",
  "faker ~=37.4",
  "ruff ~= 0.6",
  "testcontainers ~=4.9",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    ".eggs",
    ".git", 
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv11",
    "migrations",
    "config",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
