[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2,<9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
dynamic = ["version", "dependencies"]
description = "Application principale de data-transform"

# Définition du répertoire source
[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app" = ["*", "migrations/*"]

[project.optional-dependencies]
dev = [
  "import-linter ~= 2.3",
  "pytest ~=9.0",
  "pytest-cov ~=7.0",
  "mypy ~= 1.11",
  "pip-tools ~= 7.4",
  "pre-commit ~=4.1",
  "faker ~=37.4",
  "ruff ~= 0.6",
  "testcontainers ~=4.9",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]