[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grist-plugins"
version = "0.1.0"
description = "Plugin FastAPI avec templating HTML pour Grist"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"grist_plugins" = ["*"]

[project.optional-dependencies]
dev = [
  "import-linter ~= 2.3",
  "pytest ~= 8.3",
  "pytest-cov ~=6.0",
  "mypy ~= 1.11",
  "black ~=25.1",
  "pip-tools ~= 7.4",
  "pre-commit ~=4.1",
  "faker ~=37.4",
  "ruff ~= 0.6",
  "testcontainers ~=4.9",
]
