[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2,<9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grist-plugins"
dynamic = ["version", "dependencies"]
description = "Application qui détient les nouvelles APIs Data Etat (v3+)"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"grist_plugins" = ["*", "static/*", "static/**/*", "templates/**/*", "templates/*"]


[project.optional-dependencies]
dev = [
  "import-linter ~= 2.3",
  "pytest ~=9.0",
  "pytest-cov ~=7.0",
  "mypy ~= 1.11",
  "pip-tools ~= 7.4",
  "pre-commit ~=4.1",
  "faker ~=40.1",
  "ruff ~= 0.6",
  "testcontainers ~=4.9",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    ".eggs",
    ".git", 
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv11",
    "migrations",
    "config",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
