[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=9.2,<10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "models"
dynamic = ["version"]
description = "Modèles communs pour l'application DRN"
dependencies = [
    "sqlalchemy ~= 2.0.36",
    "pandas ~= 2.0",
    "geopandas ~= 1.1.0", 
    "geoalchemy2 ~=0.18.0",
    "cryptography==45.0.7",
    "marshmallow-sqlalchemy ~= 1.1",
    "marshmallow-dataclass ~= 8.5",
    "marshmallow-jsonschema ~= 0.13"
]

[tool.poetry]
version = "0.1.0"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.optional-dependencies]
dev = [
  "pytest ~= 8.3",
  "pytest-cov ~=6.0",
]