[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "services"
dynamic = ["version"]
description = "Services communs pour l'application DRN"
dependencies = [ ]

[tool.poetry]
version = "0.1.0"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.optional-dependencies]
dev = [
  "pytest ~= 8.3",
  "pytest-cov ~=6.0",
]