[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=9.2,<10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "services"
dynamic = ["version", "dependencies"]
description = "Services communs pour l'application DRN"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.optional-dependencies]
dev = [
  "pytest ~=9.0",
  "pytest-cov ~=7.0",
]